  selection apparatus if gnuplot supports cairo
- "gnuplot" script command: add mechanism for naming the
  output file, and selecting EPS/PDF/PNG output directly
- Fix bug in binomial plot for 60 <= n < 170
- MS Windows build: update to gnuplot 4.3 CVS as of
  March 2009
- Enhancements for GUI menu item "Count missing values"
- tsls: add Stock-Yogo minimum eigenvalue test for weak 
  instruments
- modify the files in the win32 subdirectory of the gretl
  source to support building on MS Windows with mingw/msys

1/23/2008 version 1.8.0
- Fix bug: crash in "Add random variable" dialog
- Translation fixes
- Add new command: "modprint"
- Remove obsolete commands: "rhodiff" and "hccm"
- Speed-ups for the pdf() function as applied to a
  series argument
- New option --numeric for the nls and mle commands,
  to force the use of numerical derivatives
- Numerous small graphing and GUI fixes
- MS Windows: fix for opening graphs in old session files
- Graphs: "display PDF" option: fix possible encoding issue
- GUI graph controller: new facility to add a line, defined
  via a formula, to an existing graph
- GUI graph controller: add facility to choose point style
- Gnuplot line-color selector: extend to 6 colors, and
  distinguish between setting the "palette" and setting
  ad hoc colors for a specific graph
- Scalars: make these accessible via the icon view window;
  enable copying to clipboard as CSV; enable entry of a 
  formula (starting with "=") in scalar-editing window
- Fix encoding issue when copying to clipboard as plain
  text or RTF
- Boxplots: hand the production of these over to gnuplot
- New function: urcpval(), gives user access to James
  MacKinnon's p-values for unit root and cointegration test
  statistics (tau)
- New function: mpols(), enables multiple-precision OLS for
  user-defined matrices
- New function: toepsolv(), solves a Toeplitz system of
  linear equations
- New function: mcovg(), matrix covariogram