@@ -5,7 +5,7 @@ Reserved words, which cannot be used as the names of variables, fall
 into the following categories:
 
 \begin{itemize}
-\item Names of constants, internal variables and data types:
+\item Names of constants and data types:
   \input tabinternals.tex
   
 \item Names of \app{gretl} commands (see section~\ref{cmd-cmd}).
