@@ -46,8 +46,10 @@
 - Enhancements for GUI menu item "Count missing values"
 - tsls: add Stock-Yogo minimum eigenvalue test for weak 
   instruments
-- modify the files in the win32 subdirectory of the gretl
+- Modify the files in the win32 subdirectory of the gretl
   source to support building on MS Windows with mingw/msys
+- Enforce the prohibition on using gretl command words as
+  names for variables
 
 1/23/2008 version 1.8.0
 - Fix bug: crash in "Add random variable" dialog
